2001-05-22  Richard Frith-Macdonald <rfm@gnu.org>
	* Headers/Foundation/NSSet.h: Added ([-setSet:])
	* Source/GSSet.m: Optimise ([-unionSet:])
	* Source/GSArray.m: Tidy NSWarnMLog macros.
	* Source/GSAttributedString.m: ditto
	* Source/GSCountedSet.m: ditto
	* Source/GSDictionary.m: ditto
	* Source/NSArray.m: ditto
	* Source/NSDictionary.m: ditto
	* Source/NSSet.m: Implement ([-setSet:])

2001-05-18  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDate.m: check for nil dates in some init methods so
	we return nil on initialisation failure rather than raising an
	exception.  I believe that init failures should deallocate their
	objects and return nil.
	* Source/NSArray.m: ([-initWithContentsOfFile:]) include filename in
	NSWarnMLog() message.
	* Source/NSDictionary.m: ([-initWithContentsOfFile:]) use NSWarnMLog

2001-05-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add apply_t prototype.
	* Source/objc-gnu2next.m: Include stdio.h.
	* Source/GSFormat.m: Don't compare LONG_LONG_MAX if not defined

2001-05-15  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: ([stringByDeletingPathExtension]) rewrite to
	conform to MacOS-X documentation.
	([pathComponents]) ditto.
	* Headers/Foundation/NSInvocation.h: Added extra methods for
	setting an invocation to invoke super implementation of method.
	* Source/NSInvocation.m: Added extra methods for
	setting an invocation to invoke super implementation of method.
	* Source/GSFFCallInvocation.m: support invoke of super implementation.

2001-05-14  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/base/objc-gnu2next.h: Add error prototypes.
	* Source/objc-gnu2next.m: Include preface.h, define error funcs.

2001-05-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m: Removed some unused obsolete code.
	* Source/NSProxy.m: Modified ([methodSignatureForSelector:]) and
	([respondsToSelector:]) to work for existing methods and raise